# junk_drawer

multiselect/: app.py  multiselect_singlerow.js  styles.css
new_dash/: README.md  pyproject.toml
new_dash/apps/: baseline.py  combined.py  compressed.py  d4_combined.py  d4_fastapi.py  lazy_callback.py  lazy_keepmounted.py  partial_plotly.py
new_dash/assets_partial/: interactivity.js
new_dash/common/: app_factory.py  factories.py
new_dash/dash4/: pyproject.toml
new_dash/deploy/: Dockerfile  celery_shared.py  ingress-notes.md  serve_dash4_background.py  serve_dash4_native.py  serve_fastapi.py
new_dash/docs/: FINDINGS.md
